# SL

./: CMakeLists.txt  README.md  bot.cpp  main.cpp
SL/Compiler/CodeGenerator/: CodeGenerator.cpp  CodeGenerator.h
SL/Compiler/Lexer/: Lexer.cpp  Lexer.h
SL/Compiler/Node/: Node.cpp  Node.h
SL/Compiler/Parser/: Parser.cpp  Parser.h
SL/Compiler/additional/: enums.h  functions.cpp  functions.h  types.h
SL/VM/Runner/: Runner.cpp  Runner.h
SL/VM/Var/: Var.cpp  Var.h
